# morale-officer

./: .gitignore  Cargo.toml  LICENSE  README.md  build.sbt  project.clj
.bsp/: sbt.json
src/: main.rs  morale.rs
src/learning/: core.clj
src/main/scala/: AnimalSubreddits.scala  BrowserService.scala  CLI.scala  CatSubs.scala  CliApp.scala  Codility.sc  Main.scala  MoraleOfficer.scala  Neelix.scala  PostContext.scala  PostService.scala  ScrapingService.scala  SqliteService.scala
src/main/scala/cli/: Backend.scala  Frontend.scala
src/main/scala/data/: AnimalSubreddits.scala  Post.scala  UnopenedPostsForSubreddit.scala
src/main/scala/messages/: Request.scala  Response.scala
src/main/scala/model/: DbContext.scala  PostContext.scala
src/main/scala/neelix/: Neelix.scala
src/main/scala/services/: BrowserService.scala  PostService.scala  ScrapingService.scala  SqliteService.scala
src/moraleofficer/: core.clj
src/resources/: application.properties
test/learning/: core_test.clj
