[package]
name = "morale-officer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
scraper = "0.12.0"
webbrowser = "0.6.0"
rusqlite = "0.27.0"
rayon = "1.5.1"
